--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ next-env.d.ts
 
 # python venv
 backend/venv/
+
+# backend logging files
+backend/sports-news/data/*
+backend/sports-news/responses/*
