--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "clsx": "^2.1.1",
+    "mongoose": "^8.5.3",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18"
   },
