Updates for deploying on talentsprint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start-local": "next start",
+    "start-prod": "next start -p 8118",
     "lint": "next lint"
   },
   "dependencies": {
