--- a/.env.sample
+++ b/.env.sample
@@ -7,4 +7,4 @@ MONGO_USER="username"
 MONGO_PASSWORD="password"
 MONGO_NAME="db_name"
 MONGO_HOST="host_name"
-MONGO_URL="{MONGO_HOST}:27017/{MONGO_NAME}"
+MONGO_URL=${MONGO_HOST}:27017/${MONGO_NAME}
