--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^3.0.1",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-data-grid": "^7.16.0",
     "@next/mdx": "^14.2.7",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
