--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
